Own controller for authentication implemented